--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,15 @@
             donde vamos a explicar las cosas
              increibles que se pueden hacer
             con ramas</p>
+        <p> los blogs son la mejor
+            forma de compartir
+            información y tus ideas.
+            Mucho mas que ir a 
+            conferencias o salir en 
+            Youtube. Excepto si eres
+            un rockstar. pero 
+            estadisticamente no lo
+            eres... por ahora.</p>
             </div>
         </div>
     </body>
