--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">tu blog de 
-                    confianza</span>
+                    maestro</span>
             </div>
             <div id="post">
         <h1>Este es el título atractivo
@@ -26,6 +26,7 @@
             un rockstar. pero 
             estadisticamente no lo
             eres... por ahora.</p>
+            <p>suscribete y dale like</p>
             </div>
         </div>
     </body>
