--- a/blogpost.html
+++ b/blogpost.html
@@ -28,6 +28,9 @@
             eres... por ahora.</p>
             <p>suscribete y dale like</p>
             </div>
+	    <div id="footer">
+		    hecho con amor en Platzi 
+	   </div>
         </div>
     </body>
 </html>
